--- a/OS-RIKI/docker-compose.yml
+++ b/OS-RIKI/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: minio/minio
     container_name: minio  
     environment:
-      MINIO_ROOT_USER: admin
-      MINIO_ROOT_PASSWORD: admin123
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     ports:
       - "9000:9000"
       - "9001:9001"
@@ -24,25 +24,12 @@ services:
     depends_on:
       - minio
     environment:
-      AWS_ACCESS_KEY_ID: admin
-      AWS_SECRET_ACCESS_KEY: admin123
-    # command: ["ruff", "check", "."]- i run it before
-    command: ["python", "minioClient.py"]
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+    command: sh -c "ruff check . --fix && python minioClient.py"
     networks:
       - minio-net
 
 networks:
   minio-net:
     driver: bridge
-
-
-
-
-
-
-
-
-
-
-
-
