added unit test

--- a/MinIO/Dockerfile
+++ b/MinIO/Dockerfile
@@ -6,6 +6,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir --trusted-host pypi.org --trusted-host files.pythonhosted.org -r requirements.txt
 
 
-COPY demo.py .
+COPY . .
 
-CMD ["bash", "-c", "ruff check . && ruff format . && python demo.py"]
+# CMD ["bash", "-c", "ruff check . && ruff format . && python demo.py"]
+
+CMD ["python", "demo.py"]
